fix rounded corner buttons to square on mobile

--- a/css/citybeauty.css
+++ b/css/citybeauty.css
@@ -20,7 +20,8 @@ b{font-weight: 400;}
 .button{width: 171px;height: 30px;font-size: 14px; border-width: 1px;border-color: rgb(6, 16, 42);border-style: solid;text-align: center;display: flex;justify-content: center;align-items: center;}
 .button_sm{width: 80px;height: 30px;font-size: 14px; margin-left: 10px;border-width: 1px;border-color: rgb(6, 16, 42);border-style: solid;text-align: center;display: flex;justify-content: center;align-items: center;}
 .button_bg{width: 240px;height: 32px;font-size: 14px; border-width: 1px;border-color: rgb(6, 16, 42);border-style: solid;text-align: center;display: flex;justify-content: center;align-items: center;}
-.submitbtn{width: 110px;height: 30px;font-size: 14px; font-weight: 300;border-width: 1px;border-color: rgb(6, 16, 42);border-style: solid;text-align: center; display: flex;justify-content: center;align-items: center;}
+.submitbtn{width: 110px;height: 30px;font-size: 14px; font-weight: 300;border-width: 1px;border-color: rgb(6, 16, 42);
+  border-style: solid;text-align: center; display: flex;justify-content: center;align-items: center;border-radius: 0px;-webkit-border-radius: 0px;}
 .button_blue{background-color: rgb(6, 16, 42);color: rgb(255, 255, 255);}
 .button_wht{background-color: rgb(255, 255, 255);color: rgb(6, 16, 42);}
 .button_blue a{color: #ffffff;}
@@ -72,7 +73,7 @@ a:hover {color: #e1c37b;text-decoration: underline;}
 .popup-header {background: rgb(9,30,55);height: 41px; padding: 9px 18px;color: #ffffff;}
 .popupbody {padding: 6px 20px;}
 .popup-btn {float: right;}
-.infusion-field-input-container {display: block; width: 100%; height: 32px;}
+.infusion-field-input-container {display: block; width: 100%; height: 32px;border-radius: 0px;-webkit-border-radius: 0px;}
 .infusion-field label {font-weight: 300;}
 #popupClose:hover {cursor: pointer;}
 select#inf_custom_Whichproductareyouinterestedin {width: 100%; height: 32px;
